[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/MainMenu/Button/Button.tscn" type="PackedScene" id=2]

[sub_resource type="Animation" id=1]
resource_name = "MenuAppear"
tracks/0/type = "method"
tracks/0/path = NodePath("VBoxContainer/StartGame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "appear"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("VBoxContainer/Options")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "appear"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("VBoxContainer/Exit")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "appear"
} ]
}

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 16

[node name="StartGame" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_right = 1360.0
buttonText = "Start Game"

[node name="Options" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 56.0
margin_right = 1360.0
margin_bottom = 96.0
buttonText = "Options"

[node name="Exit" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 112.0
margin_right = 1360.0
margin_bottom = 152.0
buttonText = "Exit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/MenuAppear = SubResource( 1 )
[connection signal="pressed" from="VBoxContainer/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
